[package]
name = "editorjs2html"
version = "0.1.4"
edition = "2021"
authors = ["JS <mkjsm57@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "editorjs2html converts Editor.js output into clean HTML, supporting multiple block types efficiently."
keywords = ["editorjs", "html", "parser", "editorjs-to-html", "editor-js"]
categories = ["parser-implementations", "parsing"]
repository = "https://github.com/MKJS57/editorjs2html"
documentation = "https://docs.rs/editorjs2html"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
log = { version = "0.4.25" }

[[example]]
name = "simple"
path = "./examples/simple.rs"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = 3     # Maximum optimizations
debug = false     # No debug symbols (reduces size)
lto = "fat"       # Link Time Optimization (LTO) for better performance
codegen-units = 1 # Improve optimization at the cost of compile time
panic = "abort"   # Smaller binary size by removing unwind handling
strip = "symbols" # Reduce binary size while keeping backtrace support
